--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/auth-helpers-shared": "^0.7.0",
     "@supabase/supabase-js": "^2.49.4",
+    "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
+    "recharts": "^2.15.1",
+    "twilio": "^5.5.1",
     "use-places-autocomplete": "^4.0.1",
+    "winston": "^3.17.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
