--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/auth-helpers-shared": "^0.7.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tabler/icons-react": "^3.31.0",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
+    "immer": "^10.1.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -23,18 +28,22 @@
     "react-apexcharts": "^1.7.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
+    "react-hook-form": "^7.55.0",
     "react-qr-code": "^2.0.15",
     "recharts": "^2.15.1",
     "twilio": "^5.5.1",
     "use-places-autocomplete": "^4.0.1",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.4",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
