feat: moje zmiany

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:-3000} -H 0.0.0.0",
     "lint": "next lint"
   },
+  "engines": { "node": ">=18 <=22" },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.14.1",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
@@ -20,7 +23,9 @@
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "immer": "^10.1.1",
+    "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -49,6 +54,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "postcss": "^8.5.3",
+    "supabase": "^2.24.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
