--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-shared": "^0.7.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
+    "@upstash/redis": "^1.35.3",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
