--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.55.0",
     "react-qr-code": "^2.0.15",
     "recharts": "^2.15.1",
+    "resend": "^6.0.3",
     "twilio": "^5.5.1",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0",
