--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
+    "zod": "^4.1.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
