--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "twilio": "^5.5.1",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0",
+    "web-push": "^3.6.7",
     "winston": "^3.17.0",
     "zod": "^4.1.8",
     "zustand": "^5.0.3"
