--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@tabler/icons-react": "^3.31.0",
     "@upstash/redis": "^1.35.3",
+    "@vercel/speed-insights": "^1.2.0",
     "apexcharts": "^4.5.0",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
